@@ -2,6 +2,8 @@
 - Inference: added support for using indices of a templated type.
 - Inference: improved support for detecting mutation in loops/conditionals.
 - DRF: added option to ignore asserts.
+- Inference: in some obscure cases, writes were being incorrectly replaced by a
+  write to 0.
 
 2024-06:
 - Inference: improved support for assertion inference
